--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="index.js"></script>
   </head>
   <body onclick="next()">
-    <div id="quote">fsfsdf</div>
+    <div id="quote"></div>
   </body>
 </html>
